# data-analytics-challenges

./: .gitignore  dbt_project.yml  pyproject.toml
models/dimensions/: dim_time.sql  dim_users.sql
models/eda_orders/: schema.yml
models/eda_orders/dimensions/: dim_places.sql
models/eda_orders/facts/: facts_orders.sql
models/facts/: facts_orders.sql
