[tool.poetry]
name = "eda-orders"
version = "0.1.0"
description = ""
authors = ["Oscar De Alva"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^0.8.1"
dbt-duckdb = "^1.6.0"
dbt-bigquery = "^1.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
